fixed search button on mobile

--- a/app/assets/stylesheets/components/_search_form.scss
+++ b/app/assets/stylesheets/components/_search_form.scss
@@ -21,8 +21,8 @@
   border-color: transparent ;
   color: rgba(0, 0, 0, 0.5);
   font-size: 16px;
-
-
+  padding: 0px;
+  margin-left: 4px;
 }
 
 .icon-search{
